objects/ReportVerticali__c.object
<CustomObject>
    <fields>
        <fullName>Civico__c</fullName>
        <label>Civico</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comune__c</fullName>
        <label>Comune</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IDBuilding__c</fullName>
        <label>IDBuilding</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IDRisorsa__c</fullName>
        <label>IDRisorsa</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Indirizzo__c</fullName>
        <label>Indirizzo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParticellaTop__c</fullName>
        <label>ParticellaTop</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>ReportVerticali</label>
    <nameField>
        <label>ReportVerticali Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ReportsVErticali</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>